--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
       <div class="b word"></div>
       <div class="b word2"></div>
       <span class="b wrong-letters-wrapper">
-        [
+        <div class="wrong">Wrong Letters:</div>
+        (
         <span class="wrong-letters"></span>
-        ]
+        )
       </span>
       <div class="already-guessed">You've already guessed that letter!</div>
     </div>
